2011-05-09  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #33238.
	* include/avr/iom8u2.h: Fix _VECTORS_SIZE value.
	* include/avr/iom16u2.h: Same.
	* include/avr/iom32u2.h: Same.
	* NEWS: Add to fixed bug list.

2011-03-17  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iotn11.h: Poison deprecated items.
	* include/avr/iotn12.h: Same.
	* include/avr/iotn13.h: Same.
	* include/avr/iotn15.h: Same.
	* include/avr/iotn22.h: Same.
	* include/avr/iotn2313.h: Same. Also: remove duplicate definitions.
	* include/avr/iotn26.h: Same.
	* include/avr/iotn28.h: Same.

2011-03-16  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom3290.h: Poison deprecated items.
	* include/avr/iom32m1.h: Same.
	* include/avr/iom64.h: Same.
	* include/avr/iom645.h: Same.
	* include/avr/iom6450.h: Same.
	* include/avr/iom649.h: Same.
	* include/avr/iom8.h: Same.
	* include/avr/iom8515.h: Same.
	* include/avr/iom8535.h: Same.
	* include/avr/iomx8.h: Same.
	* include/avr/iomxx4.h: Same.
	* include/avr/iomxx0_1: Same. Also add missing vector number
	definitions.

2011-03-15  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom323.h: Poison deprecated items.
	* include/avr/iom325.h: Same.
	* include/avr/iom3250.h: Same.
	* include/avr/iom329.h: Same.

2011-03-08  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom32.h: Poison deprecated items.

2011-03-08  Anitha Boyapati <anitha.boyapati@atmel.com>

	Fix for bug #32698.
	* include/avr/power.h: Fix #endif error for Xmega A series.

2011-03-06  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom163.h: Poison deprecated items.
	* include/avr/iom165.h: Same.
	* include/avr/iom165p.h: Same.
	* include/avr/iom169.h: Same.
	* include/avr/iom169p.h: Same.

2011-03-05  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom162.h: Poison deprecated items.

2011-03-05  Eric B. Weddington  <eric.weddington@atmel.com>
